# Immigration-Law-Guidance-App

./: .gitignore  BRANCH_AUDIT.md  README.md  vercel.json
backend/: .env.example  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/core/: __init__.py  config.py
backend/app/db/: __init__.py  connection.py
backend/app/middleware/: request_context.py
backend/app/schemas/: __init__.py  auth.py  chat.py  official_updates.py  retrieval.py
backend/app/services/: __init__.py  admin_service.py  answer_formatting.py  ask_memory_context.py  auth_service.py  chat_service.py  conversation_context.py  dependency_health.py  follow_up_suggestions.py  guided_intake.py  legal_guardrails.py  message_classifier.py  mvp_source_scope.py  official_updates_feeds.py  official_updates_service.py  official_updates_summary.py  official_updates_topics.py  ollama_chat_client.py  ollama_embedding_client.py  query_rewriter.py  query_understanding.py  rate_limit_service.py  reranker.py  retrieval_scoring.py  retrieval_service.py  schema_health.py
backend/scripts/: supabase_audit.py
backend/scripts/bia/: generate_missing_embeddings.py
backend/tests/: test_answer_formatting.py  test_ask_memory_context.py  test_conversation_context.py  test_follow_up_suggestions.py  test_guided_intake.py  test_legal_guardrails.py  test_message_classifier.py  test_official_updates_topics.py  test_query_understanding.py  test_rag_v2_cutover_quality.py  test_rate_limit_key.py  test_retrieval_schema.py  test_retrieval_scoring.py  test_retrieval_service_helpers.py
docs/: TECH_STACK.md  (+26 more)
(+312 files in other folders)
